@@ -1,0 +1,63 @@
+#!/usr/bin/env python
+#
+# __COPYRIGHT__
+#
+# Permission is hereby granted, free of charge, to any person obtaining
+# a copy of this software and associated documentation files (the
+# "Software"), to deal in the Software without restriction, including
+# without limitation the rights to use, copy, modify, merge, publish,
+# distribute, sublicense, and/or sell copies of the Software, and to
+# permit persons to whom the Software is furnished to do so, subject to
+# the following conditions:
+#
+# The above copyright notice and this permission notice shall be included
+# in all copies or substantial portions of the Software.
+#
+# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY
+# KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE
+# WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
+# NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE
+# LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
+# OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
+# WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+#
+
+__revision__ = "__FILE__ __REVISION__ __DATE__ __DEVELOPER__"
+
+"""
+Make sure that $CPPPATH expands correctly if one of the subsidiary
+expansions contains a stringable non-Node object.
+"""
+
+import TestSCons
+
+test = TestSCons.TestSCons()
+
+test.write('SConstruct', """
+class XXX:
+    def __init__(self, value):
+        self.value = value
+    def __str__(self):
+        return 'XXX-' + self.value + '-XXX'
+env = Environment(CPPPATH = ['#',
+                             '$BUILDDIR',
+                             '/tmp/xyzzy'],
+                  BUILDDIR = '#scons_build/$PLATFORM',
+                  PLATFORM = XXX('win32'))
+env.Object('foo.c')
+""")
+
+test.write('foo.c', """\
+#include <stdio.h>
+void
+foo(void)
+{
+    printf("foo.c\\n");
+}
+""")
+
+test.run(arguments = '.')
+
+test.must_exist(test.workpath('foo' + TestSCons._obj))
+
+test.pass_test()
